basic spacing fixes just temp styles

--- a/src/components/tubeplayer/TubePlayer.css
+++ b/src/components/tubeplayer/TubePlayer.css
@@ -16,6 +16,7 @@ body {
   justify-content: center;
   margin-inline: auto;
   background-color: black;
+  margin-top: 76px;
 }
 
 .video-container.theater,
